Added sticky footer

--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ footer {
   padding: 13px 0px 2px 0px;
   border-top: 8px solid #4aaaa5;
   flex-shrink: 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
 .nav-container {
