--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ header {
 
 body {
   font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+  height: 100%;
 }
 footer {
   text-align: center;
@@ -46,6 +47,7 @@ footer {
 .main-container {
   width: 100%;
   background-image: url("./images/cork-board.png");
+  height: 100%;
 }
 
 p.main-item {
